# AESRansom

./: .gitignore  AES.c  AES128C.cpp  README.md  orchestrator.ps1  shellBTC.py
src/: AESWrapper.cpp  CMakeLists.txt  main.cpp  resource.h  resources.rc  shellBTC.py
